--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT = 3030
-DATABASE = "devcoindb"
-DATABASE_USER = "wltktmdb9eoz7k3iypqs"
-DATABASE_PASSWORD = "pscale_pw_FC06Wj9fwh1wstqlJKBWRglqdLxQoZ6Nna3UYuV74Nw"
-DATABASE_HOST = "us-east.connect.psdb.cloud"
+DATABASE = "railway"
+DATABASE_PORT = '7326'
+DATABASE_USER = "root"
+DATABASE_PASSWORD = "mUbr8jBSqDG5UDW7bu0Z"
+DATABASE_HOST = "containers-us-west-93.railway.app"
 DATABASE_DIALECT = "mysql"
 TOKENJSW = "ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789!@#$%^&*()+"
-DATABASE_URL='mysql://ep09xi76x54gtx94uclg:pscale_pw_68wjN6ScMORDpkAYFZBpt38doK5uCCvysf08GzwMuCp@us-east.connect.psdb.cloud/devcoindb?ssl={"rejectUnauthorized":true}'
